--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: ShinyImage
 Type: Package
 Title: ShinyImage
 Version: 0.1.0
-Authors@R: c(person("Alexander", "Fu", email = "aafu@ucdavis.edu", 
-        role = c("aut", "cre")),
-     person("Norm", "Matloff", email = "nsmatloff@ucdavis.edu", 
+Authors@R: c(person("Alexander", "Fu", email = "aafu@ucdavis.edu",
+        role = c("aut")),
+     person("Norm", "Matloff", email = "nsmatloff@ucdavis.edu",
         role = c("aut", "cre")))
 Description: Imaging package, with an emphasis on recording history of changes.
 License: MIT
