--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,5 +7,6 @@ Authors@R: c(person("Alexander", "Fu", email = "aafu@ucdavis.edu",
      person("Norm", "Matloff", email = "nsmatloff@ucdavis.edu",
         role = c("aut", "cre")))
 Description: Imaging package, with an emphasis on recording history of changes.
+Depends: EBImage
 License: MIT
 LazyData: TRUE
