Fixed loading issues, minor typos in the readme, added user-installed dependencies in readme, fixed R installation problems

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,4 @@ Description: Imaging package, with an emphasis on recording history of changes.
 Depends: EBImage
 License: MIT
 LazyData: TRUE
+RoxygenNote: 6.0.1
