--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,7 @@ export(runShiny)
 export(shinyimg)
 export(shinyload)
 import(shiny)
-import(shinyjs)
 importFrom(R6,R6Class)
+importFrom(shinyjs,hidden)
+importFrom(shinyjs,hide)
+importFrom(shinyjs,show)
