--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(shinyimg)
 export(shinyload)
 export(siaction)
 import(shiny)
+importFrom(R6,EBImage)
 importFrom(R6,R6Class)
 importFrom(shinyjs,hidden)
 importFrom(shinyjs,hide)
