--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(runShiny)
 export(shinyimg)
 export(shinyload)
 export(siaction)
+import(EBImage)
 import(shiny)
-importFrom(R6,EBImage)
 importFrom(R6,R6Class)
 importFrom(shinyjs,hidden)
 importFrom(shinyjs,hide)
