EBImage imported specific functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,17 @@ export(runShiny)
 export(shinyimg)
 export(shinyload)
 export(siaction)
-import(EBImage)
 import(shiny)
+importFrom(EBImage,Image)
+importFrom(EBImage,channel)
+importFrom(EBImage,colorMode)
+importFrom(EBImage,combine)
+importFrom(EBImage,display)
+importFrom(EBImage,gblur)
+importFrom(EBImage,imageData)
+importFrom(EBImage,readImage)
+importFrom(EBImage,rotate)
+importFrom(EBImage,writeImage)
 importFrom(R6,R6Class)
 importFrom(shinyjs,hidden)
 importFrom(shinyjs,hide)
