--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ShinyImage
 Type: Package
-Title: ShinyImage
+Title: Shiny Image: An imaging package with an emphasis on recording history of changes
 Version: 0.1.0
 Authors@R: c(person("Alexander", "Fu", email = "aafu@ucdavis.edu",
         role = c("aut")),
