--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,8 @@ Authors@R: c(person("Alexander", "Fu", email = "alexfu95@gmail.com",
         role = c("aut")),
      person("Ariel", "Shin", email = "arishin@ucdavis.edu",
         role = c("aut")),
+     person("Aaron", "Kaloti", email = "apksingh@ucdavis.edu",
+        role = c("aut")),
      person("Norm", "Matloff", email = "nsmatloff@ucdavis.edu",
         role = c("aut", "cre")))
 Author: Alexander Fu [aut], 
